[project]
name = "crispat"
version = "0.9.1"
authors = [
  { name="Jana M. Braunger", email="jana.braunger@cos.uni-heidelberg.de" },
]
description = "CRISPR guide assignment tool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/velten-group/crispat"