[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crispat"
version = "0.9.8"
authors = [
  {name="Jana M. Braunger", email="jana.braunger@cos.uni-heidelberg.de" },
]
description = "CRISPR guide assignment tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
        "anndata>=0.8.0",
        "matplotlib>=3.7.1",
        "numpy==1.24.3",
        "pandas>=1.5.3",
        "pyro-ppl>=1.8.6",
        "scanpy>=1.9.3",
        "scipy>=1.9.3",
        "seaborn>=0.12.2",
        "setuptools>=70.0.0",
        "torch>=2.2.0",
        "tqdm>=4.66.3",
        "dask>=2023.6.0",
        "distributed>=2023.6.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/velten-group/crispat"